--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,37 @@
     animation-fill-mode: forwards;
 }
 
+/*  Game classes */
+.play-game {
+    height: 100%;
+    min-height: 516px;
+    max-height: 623px;
+}
+
+.gameboard {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-content: center;
+    gap: 20px;
+
+    width: 100%;
+    height: 100%;
+    min-height: 328px;
+    max-height: 461px;
+}
+
+.gameboard-space {
+    border: none;
+    min-width: 96px;
+    min-height: 96px;
+    aspect-ratio: 1/1;
+}
+
+.gameboard-token {
+    width: 64;
+    height: 64px;
+}
+
 /*  Headings */
 .upper-text {
     text-transform: uppercase;
