--- a/src/App.css
+++ b/src/App.css
@@ -210,10 +210,9 @@
 }
 
 .play-game-top-menu {
-    min-height: 40px;
-    max-height: 40px;
-    height: 7vw;
     margin-bottom: 64px;
+    min-height: 40px;
+    max-height: 52px;
 }
 
 .play-game-grid {
@@ -221,25 +220,33 @@
     grid-template-columns: 1fr 1fr 1fr;
     align-content: center;
     gap: 20px;
-    width: 60vw;
-    height: 100%;
 
+    width: 60vw;
     min-width: 328px;
     max-width: 460px;
+}
+
+.play-game-top-menu-expanding-element {
+    position: relative;
+    height: 7vw;
+    max-height: 52px;
+    min-height: 40px;
+
+    border-radius: 5px;
 }
 
 .play-game-reload {
     justify-self: end;
 
     border: none;
-
-    width: 40px;
-    height: 40px;
+    border-radius: 5px;
+    aspect-ratio: 1;
 }
 
 .play-game-reload p {
     margin-top: -8px;
     margin-bottom: 0px;
+
     font-size: 30px;
 }
 
@@ -268,8 +275,9 @@
 }
 
 .player-turn-indicator-box {
-    height: 7vw;
+    position: relative;
     border-radius: 5px;
+    height: 7vw;
     max-height: 52px;
     min-height: 40px;
 }
@@ -281,40 +289,33 @@
     max-height: 52px;
 }
 
-.player-turn-indicator-group {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    max-height: 52px;
-    min-height: 40px;
-}
-
 .player-turn-mark {
-    width: 16.7%;
     position: absolute;
     top: 25%;
     left: calc(15px + (calc(100% - 96px) * 0.33));
-    max-height: 20px;
-    max-width: 20px;
+
+    width: 16.7%;
     min-width: 16px;
+    max-width: 20px;
     min-height: 16px;
+    max-height: 20px;
     aspect-ratio: 1;
 }
 
-.play-turn-heading {
+.player-turn-heading {
     position: absolute;
-    right: calc(15px + (calc(100% - 96px) * 0.33));
-    margin: 0;
-    bottom: 13px;
-    /*
-    top: calc(25%); */
+
     top: calc(50% - 18px / 2 - 2px);
-    margin-top: 0px;
-    font-family: 'Outfit';
-    font-style: normal;
-    font-weight: 700;
+    bottom: 13px;
+    right: calc(15px + (calc(100% - 96px) * 0.33));
+
+    margin: 0;
+
     font-size: 14px;
     line-height: 18px;
+    font-family: 'Outfit';
+    font-weight: 700;
+    font-style: normal;
     text-align: center;
     letter-spacing: 0.88px;
 }
@@ -417,14 +418,19 @@
 }
 
 @media only screen and (min-width: 768px) {
-    .play-turn-heading {
+    .player-turn-heading {
         top: calc(50% - 20px / 2 - 3px);
+
         font-size: 16px;
         line-height: 20px;
         letter-spacing: 1px;
     }
 
     .player-turn-indicator-box {
+        border-radius: 10px;
+    }
+
+    .play-game-top-menu-expanding-element {
         border-radius: 10px;
     }
 }
