--- a/src/client/App.css
+++ b/src/client/App.css
@@ -208,6 +208,17 @@
     animation-fill-mode: forwards;
 }
 
+.overlay-shadow {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    overflow: clip;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    background: #000;
+    top: 0;
+}
+
 .overlay-box {
     position: absolute;
     width: 100vw;
