Add winner's text color to overlay box
Additionally, fix bug where marks were being displayed as the opposite
mark

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -208,6 +208,14 @@
     animation-fill-mode: forwards;
 }
 
+.overlay-light-blue {
+    color: var(--light-blue);
+}
+
+.overlay-light-yellow {
+    color: var(--light-yellow);
+}
+
 .overlay-shadow {
     position: fixed;
     width: 100vw;
